# tiny-sales

./: .gitignore  AGENTS.md  LICENSE  README.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: pytest.yml
app/: main.py
app/cli/: main.py
app/common/: models.py  schemas.py
app/core/: config.py
app/features/auth/: models.py  router.py  security.py
app/features/auth/tests/: test_auth.py
app/features/inventory/: models.py  router.py
app/features/inventory/tests/: test_inventory.py
app/features/orders/: models.py  router.py  schemas.py
app/features/orders/tests/: test_orders.py
app/features/reports/: router.py  service.py
app/features/reports/tests/: test_reports.py
backend/: README.md  __init__.py  auth.py  main.py  models.py  pyproject.toml  schemas.py
backend/cli/: README.md  main.py
backend/migrations/models/: 0_20250530193316_init.py  0_20250601104036_init.py  1_20250530201533_None.py  2_20250601061847_add_user_auth_tables.py
backend/routers/: auth.py  inventory.py  orders.py  reports.py
backend/tests/: conftest.py  test_auth.py  test_orders.py  test_reports.py
migrations/models/: 0001_initial.py  0_20250601104036_init.py  1_20250602205419_reporting.py
src/app/: main.py
src/app/cli/: main.py
src/app/cli/commands/: some_feature_command.py
src/app/common/: models.py
src/app/core/: config.py  logging_config.py
src/app/features/: __init__.py
src/app/features/auth/: __init__.py  models.py  router.py  schemas.py  security.py  service.py
src/app/features/auth/tests/: conftest.py  test_auth.py
src/app/features/inventory/: __init__.py  models.py  router.py  schemas.py  service.py
src/app/features/inventory/tests/: conftest.py  test_inventory.py
src/app/features/orders/: __init__.py  models.py  router.py  schemas.py  service.py
src/app/features/orders/tests/: conftest.py  test_orders.py
src/app/features/reports/: __init__.py  router.py  schemas.py  service.py
src/app/features/reports/tests/: conftest.py  test_reports.py
src/tests/: conftest.py  test_logging.py
tests/: conftest.py
