[project]
name = "tiny-sales"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.119",
    "tortoise-orm>=0.21.3",
    "svix-ksuid>=0.6.2",
    "aiosqlite>=0.20.0",
    "uvicorn[standard]>=0.37",
    "aerich[toml]>=0.9.2",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=5.0.0",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
manage-users = "app.cli.main:app"

[tool.aerich]
tortoise_orm = "app.main.TORTOISE_ORM_CONFIG"
location = "./migrations"

[tool.pytest.ini_options]
pythonpath = ["src"]



[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-httpx>=0.21.2",
    "asgi-lifespan>=2.1.0",
] # httpx is already installed, this adds the pytest plugin
