[project]
name = "tiny-sales"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "tortoise-orm>=1.1.6",
    "svix-ksuid>=0.7.0",
    "aiosqlite>=0.22.1",
    "python-jose[cryptography]>=3.4.8",
    "bcrypt>=5.0.0",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
manage-users = "app.cli.main:app"

[tool.fastapi]
entrypoint = "app.main:app"

[tool.aerich]
tortoise_orm = "app.main.TORTOISE_ORM_CONFIG"
location = "./migrations"

[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = [
    "ignore:Tortoise connection 'default' was created on a different event loop and will be reconnected"
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-httpx>=0.21.2",
    "asgi-lifespan>=2.1.0",
] # httpx is already installed, this adds the pytest plugin
